--- a/prepros.config
+++ b/prepros.config
@@ -3,8 +3,8 @@
   "about": "This is a Prepros (https://prepros.io) configuration file. You can commit this file to a git repo to backup and sync project configurations.",
   "config": {
     "proxy": {
-      "enable": false,
-      "target": "",
+      "enable": true,
+      "target": "http://localhost:8888",
       "useLocalAssets": false
     },
     "reload": {
@@ -924,6 +924,12 @@
           "autoCompile": true,
           "sourceMap": true,
           "compileImported": false
+        }
+      },
+      {
+        "file": "src/js/twitter.js",
+        "config": {
+          "autoCompile": true
         }
       },
       {
