--- a/prepros-6.config
+++ b/prepros-6.config
@@ -80,12 +80,12 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7881,
+    "port": 8888,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
-      "enable": false,
-      "url": ""
+      "enable": true,
+      "url": "http://localhost:8888/"
     }
   },
   "browser-sync": {
